now fix line spacing on event titles

--- a/common/theme/static/css/common.css
+++ b/common/theme/static/css/common.css
@@ -1088,7 +1088,7 @@ nav.page_sidebar a.parent:hover {
 
 .event h3 {
 	margin: 0;
-	line-height: .9;
+	line-height: 1.4;
 	font-size: 1em;
 }
 
